# datapack

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md
.github/workflow/: tests.yml
.github/workflows/: tests.yml
cmake/: datapackConfig.cmake.in
demo/: CMakeLists.txt  binary_benchmark.cpp  debug.cpp  file_io.cpp  json_dump.cpp  json_load.cpp  object.cpp
demo/binary/: array.cpp  benchmark.cpp  binary.cpp
demo/json/: dump.cpp  load.cpp
demo/object/: api.cpp  reader.cpp  writer.cpp
demo/schema/: schema.cpp  serialize.cpp
demo/util/: debug.cpp  random.cpp
example/: base64.cpp  benchmark_binary.cpp  binary.cpp  binary_equivalency.cpp  binary_schema.cpp  datapack.cpp  debug.cpp  debug_writer.cpp  definer.cpp  dump_json.cpp  example.cpp  example.hpp  json_writer.cpp  load_json.cpp  object.cpp  object_compare.cpp  object_reader.cpp  object_writer.cpp  parser.cpp  random.cpp  schema.cpp  token.cpp  write_read.cpp  writeable.cpp  yaml.cpp
examples/: CMakeLists.txt
examples/include/datapack/examples/: entity.hpp  templated.hpp
examples/src/: entity.cpp  templated.cpp
include/common/datapack/: labelled_variant.hpp
include/common/datapack/common/: vector.hpp
include/common/datapack/encode/: base64.hpp
include/common/datapack/format/: json.hpp
include/common/datapack/util/: debug.hpp  object_writer.hpp  random.hpp
include/dataflow/: json.h
include/datapack/: binary.h  binary.hpp  common.hpp  constraint.hpp  datapack.h  datapack.hpp  debug.h  debug.hpp  definer.hpp  editor.hpp  enum.hpp  exception.hpp  file.hpp  hint.hpp  json.h  json.hpp  labelled_enum.hpp  labelled_variant.hpp  number.hpp  object.h  object.hpp  packer.hpp  packers.hpp  parser.h  parser.hpp  polymorphic.hpp  primitive.hpp  random.h  random.hpp  reader.h  reader.hpp  schema.hpp  smart_ptr.hpp  token.h  token.hpp  types.hpp  variant.h  variant.hpp  visitor.hpp  writer.h  (+3 more)
include/datapack/common/: array.hpp  enum.hpp  number.hpp  optional.hpp  primitive.hpp  string.hpp  unordered_map.hpp  variant.hpp  vector.hpp
include/datapack/encode/: base64.hpp  float_string.hpp  floating_string.hpp  string.hpp
include/datapack/format/: binary.hpp  binary_reader.hpp  binary_schema.hpp  binary_writer.hpp  json.hpp
include/datapack/schema/: binary.hpp  schema.hpp  token.hpp  tokenizer.hpp
include/datapack/std/: array.hpp  optional.hpp  string.hpp  unordered_map.hpp  variant.hpp  vector.hpp
include/datapack/util/: debug.hpp  object.hpp  object_reader.hpp  object_writer.hpp  random.hpp
include/parrot/: json.h
src/: binary.cpp  datapack.cpp  debug.cpp  definer.cpp  file.cpp  json.cpp  object.cpp  parser.cpp  polymorphic.cpp  random.cpp  reader.cpp  schema.cpp  smart_ptr.cpp  writer.cpp  yaml.cpp
src/binary/: reader.cpp  size_writer.cpp  writer.cpp
src/common/schema/: binary.cpp
src/common/util/: object_reader.cpp
src/encode/: base64.cpp  float_string.cpp  floating_string.cpp  string.cpp
src/format/: binary.cpp  binary_reader.cpp  binary_schema.cpp  binary_writer.cpp  json.cpp
src/object/: object.cpp  operations.cpp  reader.cpp  tree.cpp  writer.cpp
src/schema/: binary.cpp  schema.cpp  token.cpp  tokenizer.cpp
src/util/: debug.cpp  object.cpp  object_reader.cpp  object_writer.cpp  random.cpp
test/: CMakeLists.txt  binary.cpp  debug.cpp  encode.cpp  file.cpp  json.cpp  object.cpp  polymorphic.cpp  random.cpp  schema.cpp  smart_ptr.cpp
test/encode/: base64.cpp  float_string.cpp
test/format/: binary.cpp  binary_array.cpp  json.cpp
test/object/: object.cpp  reader.cpp  writer.cpp
test/schema/: binary.cpp  schema.cpp  tokenizer.cpp
test/util/: debug.cpp  random.cpp
