function(create_demo group name)
    add_executable(demo_${group}_${name} ${group}/${name}.cpp)
    target_link_libraries(demo_${group}_${name} datapack datapack_examples)
endfunction()

create_demo(util debug)
create_demo(binary benchmark)
create_demo(json dump)
create_demo(json load)
create_demo(object api)
